feat: add context menu when extension installed

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Gentleman",
   "version": "0.0.1",
-  "description": "Gentleman",
+  "description": "Help gentleman enjoy their time at midnight",
   "icons": {
     "16": "/images/icon.png",
     "32": "/images/icon.png",
