--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["chromeos", "omnibox", "webextensions"]
+  "cSpell.words": ["chromeos", "NVMRC", "omnibox", "webextensions"]
 }
